--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/thothJS/pathTo/issues"
   },
-  "homepage": "https://github.com/thothJS/pathTo"
+  "homepage": "https://github.com/thothJS/pathTo",
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "mocha": "^2.1.0"
+  }
 }
