--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple abstraction to identify the path and request your files and folders in a Node.js project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
