--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "path-to",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "A simple abstraction to identify the path and request your files and folders in a Node.js project",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "https://github.com/thothJS/pathTo.git"
   },
   "keywords": [
-    "pathTo",
+    "path-to",
     "path",
     "nodepath",
     "require"
