--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple abstraction to identify the path and request your files and folders in a Node.js project",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
     "gulp-jshint": "^1.9.0",
+    "gulp-mocha": "^2.0.0",
     "jshint-stylish": "^1.0.0",
     "mocha": "^2.1.0"
   }
